deploymentserviceCluster.yaml

apiVersion: v1
kind: Service
metadata:
  name: tomcat-k8ssvc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: tomcat-with-k8s

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat-k8ssvc
            port: 
              number: 8080
